[gd_scene load_steps=2 format=3 uid="uid://fkpnfc8tmhkj"]

[ext_resource type="Script" path="res://components/nodeUtilitiy/card_and_unit_area_detection.gd" id="1_6mbit"]

[node name="TwoWayDetection" type="Area2D"]
script = ExtResource("1_6mbit")

[connection signal="area_entered" from="." to="." method="handle_new_overlap"]
[connection signal="area_exited" from="." to="." method="handle_remove_overlap"]
